# epubveri

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-COMMERCIAL.md  README.md  build.rs
.github/workflows/: ci.yml  pages.yml  release-binaries.yml
docs/: ARCHITECTURE.md  COVERAGE.md  USAGE.md
epubveri-wasm/: Cargo.toml  README.md
epubveri-wasm/demo/: demo.css  index.html  tokens.css
epubveri-wasm/src/: lib.rs
harness/: Cargo.toml
harness/src/: corpus.rs  wrap.rs
schemas/: package.rng  package.sch  xhtml.rng  xhtml.sch
scripts/: corpus.py  gen-coverage.py  publish-wasm.sh  spike.py
src/: cmt.rs  css.rs  dict.rs  edupub.rs  envelope.rs  filename.rs  foreign.rs  htm.rs  ids.rs  image.rs  indexes.rs  layout.rs  lib.rs  main.rs  mathml.rs  navdoc.rs  ncx.rs  ocf.rs  opf.rs  previews.rs  regionnav.rs  renditions.rs  report.rs  smil.rs  ssv.rs  svg.rs  url.rs  xmlext.rs
src/rng/: datatype.rs  derive.rs  load.rs  mod.rs  pattern.rs
src/schematron/: mod.rs
src/xpath/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs
