[package]
name = "epubveri"
version = "0.0.0"
edition = "2021"
description = "Pure-Rust EPUB validator — a fast, JVM-free, embeddable alternative to epubcheck (measurement spike)."
license = "AGPL-3.0-only OR LicenseRef-veripublica-Commercial"
publish = false

# `harness/` is the epubcheck-corpus measurement tool (Rust port of the
# former scripts/corpus.py) - kept as a separate workspace member so its
# dev-only dependencies (e.g. `regex`) never appear in this crate's own
# Cargo.toml.
[workspace]
members = ["harness"]

[lib]
name = "epubveri"
path = "src/lib.rs"

[[bin]]
name = "epubveri"
path = "src/main.rs"

[dependencies]
# Pure-Rust only (no C deps): zip's "deflate" feature uses flate2 -> miniz_oxide (Rust),
# bzip2/zstd (C backends) are left disabled via default-features = false.
zip = { version = "2.2", default-features = false, features = ["deflate"] }
roxmltree = "0.20"
unicode-normalization = "0.1"
# CSS parsing: sibling repo (github.com/veripublica/styloria), path
# dependency during development (see CLAUDE.md's styloria/CSS-checks notes).
styloria = { path = "../styloria" }

[profile.release]
opt-level = 2
