[package]
name = "epubveri"
version = "0.5.9"
edition = "2024"
rust-version = "1.88"
description = "Pure-Rust EPUB validator — a fast, JVM-free, embeddable alternative to epubcheck."
license = "AGPL-3.0-only OR LicenseRef-veripublica-Commercial"
repository = "https://github.com/veripublica/epubveri"
homepage = "https://github.com/veripublica/epubveri"
readme = "README.md"
keywords = ["epub", "epubcheck", "validator", "ebook", "ocf"]
categories = ["parser-implementations", "command-line-utilities"]

# `harness/` is the epubcheck-corpus measurement tool (Rust port of the
# former scripts/corpus.py) - kept as a separate workspace member so its
# dev-only dependencies (e.g. `regex`) never appear in this crate's own
# Cargo.toml.
[workspace]
members = ["harness", "epubveri-wasm"]

[lib]
name = "epubveri"
path = "src/lib.rs"

[[bin]]
name = "epubveri"
path = "src/main.rs"

[dependencies]
# Pure-Rust only (no C deps): zip's "deflate" feature uses flate2 -> miniz_oxide (Rust),
# bzip2/zstd (C backends) are left disabled via default-features = false.
zip = { version = "8.6", default-features = false, features = ["deflate"] }
roxmltree = "0.21"
unicode-normalization = "0.1"
# CSS parsing: the sibling styloria crate (github.com/veripublica/styloria),
# consumed from crates.io like any external user (dogfooding). For local
# co-development of styloria, add an uncommitted override:
#   [patch.crates-io] styloria = { path = "../styloria" }
styloria = "0.2"
# The `--format json` machine envelope (FORMATS.md). Both are pure Rust, so the
# no-C-deps rule holds; the same serde types back the wasm binding's return
# value, so CLI, CI and the demo read one shape.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
